feat(chatbot): implement AI chatbot backend using LangChain4j and OpenAI